# terra-agent

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
config/: prompts.py  settings.py
data/: test_ocr.json
data/session/: o9cq800CI0PQTXid2BZVj4QRIac4@im.wechat.json
data/weixin/: 6eccec76b2f5@im.bot.sync_buf
scripts/: capture_click.py  capture_ui.py  diagnose_emu_window.py  extract_maa_data.py  maa_operbox_export.py  scrape_prts_base_skills.py  seed_skills.py  test_adb.py  test_base_schedule.py  test_elite_result.json  test_mimo_api.py  test_mimo_tool_result_image.py  test_ocr_result.json
src/: __init__.py  cli.py  container.py
src/agent/: __init__.py  background_review.py  compression_service.py  compressor.py  context_injector.py  execution_logger.py  guard_context.py  idle_watcher.py  injection_feedback.py  learning_metrics.py  loop.py  loop_guard.py  memory_hint_service.py  mouse_hook.py  observation_extractor.py  observation_recorder.py  observation_store.py  review_trigger.py  router.py  screen_injector.py  scroll_tracker.py  state.py
src/concierge/: __init__.py  agent_pool.py  fast_path.py  game_context.py  notification_buffer.py  prompts.py  router.py  session.py  slot_router.py  status_panel.py  task_queue.py  tools.py
src/device/: __init__.py  adb.py  emulator.py  emulator_inventory.py  minitouch.py
src/games/: plugin.py  registry.py
src/gateway/: __init__.py  base.py  weixin.py
src/intelligence/: __init__.py  base.py  checklist_guard.py  pattern_miner.py  skill_staleness.py
src/knowledge/: __init__.py  (+1 more)
(+121 files in other folders)
